gitops/apps/base/user-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-system
  labels:
    istio.io/dataplane-mode: ambient
