gitops/apps/base/user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user-service
  name: user-service
  namespace: user-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - env:
        - name: SPRING_DATASOURCE_URL
          valueFrom:
            secretKeyRef:
              name: user-service-credentials
              key: SPRING_DATASOURCE_URL
        - name: SPRING_DATASOURCE_USERNAME
          value: root
        - name: SPRING_DATASOURCE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: user-database-root
              key: password
        - name: SERVER_PORT
          valueFrom:
            configMapKeyRef:
              name: user-service
              key: server-port
        volumeMounts:
        - name: app-properties
          mountPath: /var/log
        image: ghcr.io/huseyinbabal/user-service:1.0.0-rc.2
        imagePullPolicy: IfNotPresent
        name: user-service
        resources:
          requests:
            memory: "256Mi"
            cpu: "128m"
      restartPolicy: Always
      volumes:
      - name: app-properties
        configMap:
          name: app-properties
