gitops/apps/base/user-service/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-service
  namespace: user-system
spec:
  hosts:
    - "api.jarvisdev.io"
  gateways:
    - istio-system/microservices-ingress-gateway
  http:
    - match:
        - uri:
            prefix: "/users"
      route:
        - destination:
            host: user-service
            port:
              number: 8080
